add all the custom fields and the contents to the What Is Montessory Page

--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -180,15 +180,8 @@ max-height: 100px;
 	background:rgba($white,0.7);
 	position: fixed;
 border-bottom: solid 2px$black;
-margin-top:0px;
+top:5px;
 }
 .site-content{
-	margin-top:78px;
+	padding-top:87px;
 }
-<<<<<<< HEAD
-
-/*.secondary {
-width: 100%;
-  .div > & {background: red; }}*/
-=======
->>>>>>> 52a06f0429f73cd968d53351a71c5e7684c7b634
