--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -10,7 +10,7 @@
   font-family: $font_footer_header;
   overflow: hidden;
   font-size: 0.8rem;
-  width: 480px;
+  width: $mobile_width;
     height:150px;
     background-color:$color_footer_green;
     color:$white;
@@ -18,7 +18,7 @@
 /*block Items*/
 .footer-block-item1{
   position: relative;
-  width: 90%;
+  width: 100%;
   padding: 10px 0 30px 0;
 height: 30px;
   margin-top:-10px;
@@ -36,7 +36,7 @@ height: 30px;
     }
   }
 }
-.boarder1{
+ .boarder1{
   border-left: solid 1px $white;
   border-right: solid 1px $white;
 }
@@ -48,7 +48,7 @@ height: 30px;
   padding-left: 20px;
   padding-bottom: 0px;
 
-  width: 90%;
+  width: 100%;
 text-align: center;
 p{
 margin-bottom: 0px;
@@ -76,7 +76,7 @@ i{
 
 .footer-block-item3{
   padding-top: 5px;
-    width:90%;
+    width:100%;
     height: 20px;
   text-align: center;
   text-transform:capitalize;
@@ -89,9 +89,11 @@ i{
 
 .footer-block-item1 li{
   a:hover{
+    cursor: pointer;
   color: $color_btn_hover_green;
   }
 }
 .footer-block-item2 a:hover{
+  cursor: pointer;
     color: $color_btn_hover_green;
 }
