--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -4,9 +4,7 @@ site-main{
      width: 480px;
      margin-left: auto;
      margin-right: auto;
-    //  flex-direction: row;
-    //  display: inline-flex;
-    //  justify-content: space-between;
+    
    }
 .involved-title{
 green-btn{
@@ -51,16 +49,12 @@ green-btn{
       width: 480px;
       margin-left: auto;
       margin-right: auto;
-      // padding: 0;
-      // display: inline-flex;
-      // justify-content: space-between;
+   
     }
 
     h1{
       a{
-        // flex-direction: row;
-        // display: inline-flex;
-        // justify-content: space-between;
+        
         text-decoration: none;
         padding-left:19px;
         padding-right:36px;
@@ -87,36 +81,5 @@ green-btn{
 
 }
 
+ }
 
-
-// .wrapper{
-//   .green-btn {
-//       border-radius: 6px;
-//       width:200px;
-//       height: 120px;
-//       background-color: #4FC8A1  ;
-//       border-color: #4FC8A1  ;
-//      font-family: "Noto Sans";
-//      font-size: 20px;
-//      font-weight: bold;
-//      text-align: center;
-//      line-height: 30px;
-//      color: #000;
-//      margin-left: 15px;
-//      box-shadow: none;
-//      font-weight: 300;
-//      text-shadow: none;
-//      letter-spacing: .8px;
-//      display: block;
-//
-//    }
-//
-// }
-//
-//
-//  // this is for sidebar //
-// // .sidebar {
-// //   width : 27%;
-// //   float :left;
-// //
-// // }
