--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -704,7 +704,7 @@ div .secondary {
       color: white; }
 
 .responsive-menu-button {
-  margin-top: 3rem !important; }
+  margin-top: 0.5rem !important; }
 
 #primary-menu li.current-menu-item a {
   border-top: 6px solid #57B79F;
@@ -1095,17 +1095,25 @@ body {
 /*--------------------------------------------------------------
 # Montessori
 --------------------------------------------------------------*/
-.main-history,
-.main-materials,
-.philosophy-section {
-  padding-bottom: 60px;
-  border-bottom: 2px solid #2EB688; }
-
-ul .history-thumbnail img {
+.main-history img {
   float: left;
   width: 227px;
   height: 244px; }
 
+.main-history p {
+  text-align: left; }
+
+/*.main-history,
+.main-materials,
+.philosophy-section{
+padding-bottom: 60px;
+   border-bottom: 2px solid #2EB688;
+}*/
+/*.history-thumbnail{
+    img{
+       
+    }
+}*/
 /*
 .main-materials{
      padding: 0px;
@@ -1142,43 +1150,48 @@ a{
     width: 200px;
     */
 /*position: absolute;*/
-ul .each-philosophy {
-  width: 200px; }
-  ul .each-philosophy .philosophy-thumbnail {
-    height: 200px; }
-  ul .each-philosophy div h2 {
-    font-family: "Asap";
-    display: inline-block;
-    font-size: 1rem;
-    width: 200px;
-    height: 33px;
-    position: absolute;
-    z-index: 3;
-    color: green;
-    text-align: center; }
-  ul .each-philosophy img {
-    margin-top: 13px;
-    z-index: 1;
-    position: relative; }
-  ul .each-philosophy p {
-    font-family: "Noto Sans";
-    position: absolute;
-    z-index: 3;
-    display: none;
-    width: 200px; }
+/*
+ul .each-philosophy{
 
-.main-philosophy {
-  width: 440px;
-  padding: 10px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-      align-items: center;
-  -ms-flex-pack: justify;
-      justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap; }
+width:200px;
 
+
+    & .philosophy-thumbnail{
+
+
+        height: 200px;
+    }
+    div h2{
+        font-family: $font_title;
+        display: inline-block;
+        font-size: 1rem;
+        width: 200px;
+        height: 33px;
+        position: absolute;
+        z-index: 3;
+      color:green;
+
+      text-align: center;
+    }
+     img{
+       margin-top: 13px;
+        z-index: 1;
+       position: relative;
+    }
+     p{
+         font-family: $font_body;
+        position: absolute;
+        z-index: 3;
+        display:none;
+        width:200px;
+    }
+}
+.main-philosophy{
+    width:440px;
+   padding: 10px;
+      @include flex(center,space-between);
+    flex-wrap: wrap;
+}*/
 /*Start Resources Section  */
 site-main .involved-wrapper {
   width: 480px;
