Style What is Montessori

--- a/themes/montessori-theme/sass/style.scss
+++ b/themes/montessori-theme/sass/style.scss
@@ -67,6 +67,6 @@ TABLE OF CONTENTS:
 @import "front-page";
 @import "contact-form";
 @import "montessori";
-
+@import "navigation";
+@import "about";
 @import "involved";
-
