--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -1,69 +1,105 @@
 /*--------------------------------------------------------------
-# flip member Img
+# About Page
 --------------------------------------------------------------*/
-.flip-container {
-	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45);
-  background: #aff1d3;
-  border-radius:50%;
+// @media screen and (max-width: 480px) {
 
-}
-
-	.flip-container:hover .flipper,
-  .flip-container.hover .flipper {
-		-webkit-transform: rotateY(180deg);
-		-moz-transform: rotateY(180deg);
-		transform: rotateY(180deg);
-	}
-
-.flip-container, .front, .back {
-	width: 200px;
-	height: 200px;
-}
-
-.flipper {
-  position: relative;
-	-webkit-transition: 1.9s;
-	-webkit-transform-style: preserve-3d;
-
-	-moz-transition: 1.9s;
-	-moz-transform-style: preserve-3d;
-
-	transition: 1.9s;
-	transform-style: preserve-3d;
-
-}
-
-.front, .back {
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-
-}
-
-.front {
-  background-size:cover;
-  border-radius:50%;
-  overflow:hidden;
-}
+// General layout
+		.site-content {
+			max-width: 480px;
+			margin: 0 auto;
+			padding-left: 20;
+			padding-right: 20;
+		}
 
 
-.back {
-	-webkit-transform: rotateY(180deg);
-	-moz-transform: rotateY(180deg);
-	transform: rotateY(180deg);
 
-}
-
-.back p {
-  position: absolute;
-	padding: 0 20px;
-  font-family: arial;
-  line-height: 2em;
-  bottom: 230px;
-  text-align: center;
-}
-
-
+// 		.largImg {
+//         width: 100%;
+//         height: 50vw;
+//         flex: 1 0 100%;
+//         border-left-style: none;
+//         border-right-style: none;
+//     }
+//
+//     .smallImg {
+//         height: 50vw;
+//         width: 45%;
+//         flex: 2 0 50%;
+//     }
+//
+//
+//
+//
+//
+//
+//
+// .flip-container {
+// 	display: flex;
+//   flex-wrap: wrap;
+// 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45);
+//   background: #aff1d3;
+//   border-radius:50%;
+//
+// }
+//
+// 	.flip-container:hover .flipper,
+//   .flip-container.hover .flipper {
+// 		-webkit-transform: rotateY(180deg);
+// 		-moz-transform: rotateY(180deg);
+// 		transform: rotateY(180deg);
+// 	}
+//
+// .flip-container, .front, .back {
+// 	width: 200px;
+// 	height: 200px;
+// }
+//
+// .flipper {
+// 	flex: 1 0 auto;
+// 	display: flex;
+//  padding: 0.5em;
+// 	 width: 50%;
+//   position: relative;
+// 	-webkit-transition: 1.9s;
+// 	-webkit-transform-style: preserve-3d;
+//
+// 	-moz-transition: 1.9s;
+// 	-moz-transform-style: preserve-3d;
+//
+// 	transition: 1.9s;
+// 	transform-style: preserve-3d;
+//
+// }
+//
+// .front, .back {
+// 	-webkit-backface-visibility: hidden;
+// 	-moz-backface-visibility: hidden;
+// 	backface-visibility: hidden;
+//
+// }
+//
+// .front {
+//   background-size:cover;
+//   border-radius:50%;
+//   overflow:hidden;
+// }
+//
+//
+// .back {
+// 	-webkit-transform: rotateY(180deg);
+// 	-moz-transform: rotateY(180deg);
+// 	transform: rotateY(180deg);
+//
+// }
+//
+// .back p {
+//   position: absolute;
+// 	padding: 0 20px;
+//   font-family: arial;
+//   line-height: 2em;
+//   bottom: 230px;
+//   text-align: center;
+// }
 // <div class="flip-container">
 //   <div class="flipper">
 //     <div class="front">
@@ -74,19 +110,11 @@
 //   </div>
 // </div>
 
-
-
-button{
-  font-size:22px;
-  border:none;
-  background-color:white;
-}
-#target {
-  background-color:green;
-  width:90%;
-  height:auto;
+.target {
+  background:#0099cc;
+  width:300px;
+  height:300px;
+  height:160px;
   padding:5px;
   display:none;
-
 }
-
