--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,23 +1,23 @@
 
 // special CFS div
 
-  // <div class="cfsBorder">
-  // <div class="cfscontainer"> here will be text area <div>
-  // <div>
+  //  <div class="cfsBorder">
+  //  <div class="cfscontainer"> here will be text area <div>
+  //  <div>
 
-.cfsBorder{
-  width:10px;
-  height: 90px;
-  border-left: 3px solid #D93B57;
-
-}
-
-.cfscontainer{
-  width: 80px;
-  padding: 10px;
-  overflow:visible;
-   height: auto;
-}
+// .cfsBorder{
+//   width:10px;
+//   height: 90px;
+//   border-left: 3px solid #D93B57;
+//
+// }
+//
+// .cfscontainer{
+//   width: 80px;
+//   padding: 10px;
+//   overflow:visible;
+//    height: auto;
+// }
 
 
 // button
@@ -25,17 +25,17 @@
 // <button class="btn ">here will be the text</button>
 
 
-button {
-  width: 320px;
-  height: 66px;
-  overflow: hidden;
-}
-
-.btn {
-  padding: 20px 50px;
-  background-color: $color_btn_green;
-  color: $white;
-  font-size: 20px;
-  border: 0;
+// button {
+//   width: 320px;
+//   height: 66px;
+//   overflow: hidden;
+// }
+//
+// .btn {
+//   padding: 20px 50px;
+//   background-color: $color_btn_green;
+//   color: $white;
+//   font-size: 20px;
+//   border: 0;
   border-radius:10px;
 }
