--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -852,11 +852,28 @@ div .secondary {
 
 .site-main .home-wrapper {
   width: 480px;
-  height: 585px;
-  background-color: rgba(0, 0, 0, 0.74); }
-  .site-main .home-wrapper h2 {
-    width: 100%;
-    height: 42px;
+  height: 585px; }
+  @media (min-width: 48rem) {
+    .site-main .home-wrapper {
+      width: 541.64px;
+      height: 555px;
+      background-color: rgba(0, 0, 0, 0.74);
+      position: absolute; } }
+  .site-main .home-wrapper .home-img {
+    width: 480px;
+    height: 585px; }
+    @media (min-width: 48rem) {
+      .site-main .home-wrapper .home-img {
+        background-color: rgba(0, 0, 0, 0.74);
+        width: 1264px;
+        height: 555px;
+        z-index: -1;
+        position: relative; } }
+  @media (min-width: 48rem) {
+    .site-main .home-wrapper .welcome-wrapper {
+      z-index: -1;
+      position: relative; } }
+  .site-main .home-wrapper .welcome-wrapper h2 {
     font-family: 'Asap';
     font-size: 36px;
     line-height: 42px;
@@ -868,14 +885,25 @@ div .secondary {
     width: 119.23px;
     height: 74px;
     border-bottom: 4px solid #fff; }
-  .site-main .home-wrapper p {
+    @media (min-width: 48rem) {
+      .site-main .home-wrapper .welcome-wrapper h2 {
+        z-index: -1;
+        position: relative; } }
+  .site-main .home-wrapper .welcome-wrapper p {
     height: 160px;
     font-family: "Noto Sans";
     font-size: 20px;
     line-height: 40px;
     color: #fff;
     margin: 30px; }
-  .site-main .home-wrapper .red-btn {
+    @media (min-width: 48rem) {
+      .site-main .home-wrapper .welcome-wrapper p {
+        height: auto;
+        display: block;
+        z-index: -1;
+        position: relative;
+        visibility: visible; } }
+  .site-main .home-wrapper .welcome-wrapper .red-btn {
     background-color: #F76072;
     border-radius: 6px;
     color: #fff;
@@ -886,22 +914,36 @@ div .secondary {
     font-weight: 300;
     text-shadow: none;
     letter-spacing: 0.8px; }
+    @media (min-width: 48rem) {
+      .site-main .home-wrapper .welcome-wrapper .red-btn {
+        z-index: -1;
+        position: relative;
+        visibility: visible; } }
 
 .links-wrapper {
   width: 480px; }
+  @media (min-width: 48rem) {
+    .links-wrapper {
+      -ms-flex-direction: row;
+          flex-direction: row;
+      display: -ms-flexbox;
+      display: flex;
+      margin: 0;
+      padding: 80px 0; } }
   .links-wrapper h2 {
-<<<<<<< HEAD
     padding: 0;
     width: 480px;
-=======
-    padding-left: 38px;
-    width: 852px;
->>>>>>> 74b470766e8452090cc5ff8fdc55087bff5c042b
     height: 42px;
     font-family: "Asap";
     font-size: 36px;
     line-height: 42px;
     color: #000000; }
+    @media (min-width: 48rem) {
+      .links-wrapper h2 {
+        margin: auto;
+        display: -ms-flexbox;
+        display: flex;
+        width: 852px; } }
   .links-wrapper article p {
     width: 377px;
     font-family: "Noto Sans";
@@ -952,156 +994,149 @@ div .secondary {
 .support-wrapper {
   width: 480px;
   height: auto; }
-  .support-wrapper .information h2 {
-    width: 377px;
-    height: 42px;
-    font-family: 'Asap';
-    font-size: 36px;
-    line-height: 42px;
-    color: #000;
-    margin: 35px; }
-  .support-wrapper .information img {
-    width: 287px;
-    height: 470px; }
-  .support-wrapper .information p {
-    width: 377px;
-    font-family: "Noto Sans";
-    font-size: 20px;
-    line-height: 46px;
-    color: #000;
-    margin: 40px; }
-    .support-wrapper .information p .info {
-      width: 470px;
-      font-family: "Noto Sans";
-      font-size: 26px;
-      font-weight: bold;
+  .support-wrapper .information {
+    height: auto; }
+    .support-wrapper .information h2 {
+      border-top: 2px solid #2EB688;
+      width: 377px;
+      height: 42px;
+      font-family: 'Asap';
+      font-size: 36px;
       line-height: 42px;
-      color: #000; }
-    .support-wrapper .information p .img-text {
-      width: 470px;
+      color: #000;
+      margin: 35px; }
+    .support-wrapper .information img {
+      width: 287px;
+      height: 470px; }
+    .support-wrapper .information p {
+      width: 377px;
       font-family: "Noto Sans";
       font-size: 20px;
       line-height: 46px;
       color: #000;
-      margin: 45px; }
-  .support-wrapper .information .red-btn {
-    width: 185px;
-    height: 47px;
-    background-color: #F76072;
-    border-color: #F76072;
-    border-radius: 6px;
-    color: #fff;
-    margin-left: 20px;
-    padding: 8px;
-    box-shadow: none;
-    font-family: "Noto Sans";
-    font-size: 20px;
-    font-weight: 300;
-    text-shadow: none;
-    letter-spacing: 0.8px;
-    text-decoration: none; }
-  .support-wrapper .information .green-btn {
-    background-color: #4FC8A1;
-    border-color: #4FC8A1;
-    border-radius: 6px;
-    font-family: "Noto Sans";
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-    line-height: 30px;
-    color: #fff;
-    margin-left: 20px;
-    padding: 8px;
-    box-shadow: none;
-    font-weight: 300;
-    text-shadow: none;
-    letter-spacing: 0.8px;
-    text-decoration: none; }
+      margin: 40px; }
+      .support-wrapper .information p .info {
+        width: 470px;
+        font-family: "Noto Sans";
+        font-size: 26px;
+        font-weight: bold;
+        line-height: 42px;
+        color: #000; }
+      .support-wrapper .information p .img-text {
+        width: 470px;
+        font-family: "Noto Sans";
+        font-size: 20px;
+        line-height: 46px;
+        color: #000;
+        margin: 45px; }
+    .support-wrapper .information .red-btn {
+      width: 185px;
+      height: 47px;
+      background-color: #F76072;
+      border-color: #F76072;
+      border-radius: 6px;
+      color: #fff;
+      margin-left: 20px;
+      padding: 8px;
+      box-shadow: none;
+      font-family: "Noto Sans";
+      font-size: 20px;
+      font-weight: 300;
+      text-shadow: none;
+      letter-spacing: 0.8px;
+      text-decoration: none; }
+    .support-wrapper .information .green-btn {
+      background-color: #4FC8A1;
+      border-color: #4FC8A1;
+      border-radius: 6px;
+      font-family: "Noto Sans";
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      line-height: 30px;
+      color: #fff;
+      margin-left: 20px;
+      padding: 8px;
+      box-shadow: none;
+      font-weight: 300;
+      text-shadow: none;
+      letter-spacing: 0.8px;
+      text-decoration: none; }
 
-.features-wrapper {
+.all-features h2 {
+  box-sizing: border-box;
+  width: 440px;
+  border-top: 2px solid #2EB688;
+  padding-top: 50px;
+  height: 42px;
+  font-family: 'Asap';
+  font-size: 36px;
+  line-height: 0px;
+  color: #000;
+  margin-left: 30px; }
+  .all-features h2 .container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 480px; }
+
+.all-features .features-wrapper {
   /* 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45); */
   background: #aff1d3;
-  width: 200px; }
-
-.features-wrapper.hover .features-flipper,
-.features-wrapper:hover .features-flipper {
-  transform: rotateY(180deg); }
-
-.features-wrapper,
-.freatures-back,
-.front {
+  width: 200px;
   box-sizing: border-box;
   height: 139.76px;
   width: 480.27px; }
+  .all-features .features-wrapper .features-flipper {
+    position: relative;
+    -webkit-transition: 1.9s;
+    -webkit-transform-style: preserve-3d;
+    -moz-transition: 1.9s;
+    -moz-transform-style: preserve-3d;
+    -o-transition: 1.9s;
+    -o-transform-style: preserve-3d;
+    transition: 1.9s;
+    transform-style: preserve-3d;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -ms-flex-direction: row;
+        flex-direction: row; }
+    .all-features .features-wrapper .features-flipper:hover {
+      transform: rotateY(180deg); }
+    .all-features .features-wrapper .features-flipper .front {
+      height: auto;
+      text-align: center;
+      overflow: hidden;
+      padding: 20px;
+      width: 450px;
+      font-family: 'Asap';
+      font-size: 24px;
+      text-align: center;
+      color: #000000;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden; }
+    .all-features .features-wrapper .features-flipper .features-back {
+      width: 480px;
+      height: 170px;
+      border: 1px solid #248E6A;
+      margin: 0;
+      text-align: center;
+      overflow: hidden;
+      padding: 0;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      position: absolute;
+      bottom: 1px;
+      background-color: #fff;
+      transform: rotateY(180deg); }
 
-.features-flipper {
-  position: relative;
-  -webkit-transition: 1.9s;
-  -webkit-transform-style: preserve-3d;
-  -moz-transition: 1.9s;
-  -moz-transform-style: preserve-3d;
-  -o-transition: 1.9s;
-  -o-transform-style: preserve-3d;
-  transition: 1.9s;
-  transform-style: preserve-3d;
-  /*   display: flex; */
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-direction: row;
-      flex-direction: row; }
-
-.features-back,
-.front {
-  text-align: center;
-  overflow: hidden;
-  /*   line-height: 1.5em; */
-  padding: 20px;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
-
-.front {
-  width: 450px;
-  font-family: 'Asap';
-  font-size: 24px;
-  text-align: center;
-  color: #000000; }
-
-.features-back {
-  overflow: hidden;
-  line-height: 1.5em;
-  padding: 20px;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
-
-.features-back {
-  position: absolute;
-  bottom: 1px;
-  background-color: white;
-  border: 1px solid #248E6A;
-  transform: rotateY(180deg); }
-
-.green-btn {
+.all-features .green-btn {
   color: #248E6A;
   text-decoration: none; }
-
-/***************************************************/
-.all-features {
-  width: 480px; }
-  .all-features h2 {
-    height: 42px;
-    font-family: 'Asap';
-    font-size: 36px;
-    line-height: 0px;
-    color: #000;
-    margin-left: 30px; }
-    .all-features h2 .container {
-      margin-left: auto;
-      margin-right: auto;
-      width: 480px; }
 
 a {
   text-decoration: none; }
 
+/***************************************************/
 body {
   padding: 0;
   margin: 0; }
